--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "qext-scripts": "2.2.0"
+  },
+  "dependencies": {
+    "d3": "^5.16.0",
+    "rxjs": "^6.6.2"
   }
 }
