--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "qext-scripts": "2.2.0"
+    "qext-scripts": "2.2.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3"
   },
   "dependencies": {
     "d3": "^5.16.0",
