--- a/qext.config.json
+++ b/qext.config.json
@@ -4,7 +4,8 @@
 	"compile": {
 		"entry": "./src/index.js",
 		"qext": "./src/index.qext",
-		"static": "./static"
+		"static": "./static",
+		"altWebpackConfig": "./webpack.config.js"
 	},
 	"serverDeploy": {
 		"host": "172.16.84.100",
